# treewalker

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
docs/: about.md  configuration.md  getting_started.md  index.md  queries.md
example/: .gitignore  README.md  hello_world.py  simple_example.py
python_package/: __init__.py  _version.py  python_package.py
scripts/: README.md  build_pyinstaller.bat  build_pyinstaller_xp.bat  build_whl.bat  build_whl.sh  check_version.py  cleanup.bat  cleanup.sh  deploy_to_pypi.bat  deploy_to_pypi.sh  push_version.bat  rename_package.bat  rename_package.py  rename_package.sh  renamex.sh  run_tests.bat  run_tests.sh
test/: README.md  test_python_package.py  test_treewalker.py
treewalker/: __init__.py  _nice_size.py  treewalker.py
