[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["treewalker"]

[project]
name = "treewalker"
description = "A simple package to walk a directory tree and collect files and sizes into a SQLite DB."
requires-python = ">=3.4"
license = { text = "MIT" }
# No version here: version is determined dynamically from _version.py in setup.py

dependencies = [
  "conffu>=2.2.16",
  "scandir",
  "typing"
]

[project.optional-dependencies]
dev = [
  "mkdocs",
  "pymdown-extensions"
]

[project.urls]
Homepage = "https://pypi.org/project/treewalker"
Source = "https://github.com/jaapvandervelde/treewalker"
Documentation = "https://treewalker.readthedocs.io/"

[project.scripts]
treewalker = "treewalker.treewalker:cli_entry_point"
